state of art: + subsecções

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -45,6 +45,8 @@ Goals:
 
 3. enhance the engine to collect additional information to provide a query as outcome.
 
-\section{Dissertation outline}
 
-Que resume a estrutura do documento.
+
+% \section{Dissertation outline}
+
+% Que resume a estrutura do documento.
