rag subsection added

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -114,3 +114,9 @@
     {ML}
     {Machine Learning}
 \newcommand{\mlearning}{\gls{mlearning}}
+
+\newabbreviation
+    {rag}
+    {RAG}
+    {Retrieval-Augmented Generation}
+\newcommand{\rag}{\gls{rag}}
