--- a/bib/references.bib
+++ b/bib/references.bib
@@ -179,3 +179,61 @@
 	language = {en},
 	urldate = {2023-12-15},
 }
+
+
+@article{mesko_prompt_2023,
+	title = {Prompt {Engineering} as an {Important} {Emerging} {Skill} for {Medical} {Professionals}: {Tutorial}},
+	volume = {25},
+	issn = {1438-8871},
+	shorttitle = {Prompt {Engineering} as an {Important} {Emerging} {Skill} for {Medical} {Professionals}},
+	doi = {10.2196/50638},
+	language = {en},
+	urldate = {2023-12-21},
+	journal = {Journal of Medical Internet Research},
+	author = {Meskó, Bertalan},
+	month = oct,
+	year = {2023},
+	pages = {e50638},
+}
+
+@misc{ma_beyond_2023,
+	title = {Beyond {ChatBots}: {ExploreLLM} for {Structured} {Thoughts} and {Personalized} {Model} {Responses}},
+	shorttitle = {Beyond {ChatBots}},
+	urldate = {2023-12-21},
+	publisher = {arXiv},
+	author = {Ma, Xiao and Mishra, Swaroop and Liu, Ariel and Su, Sophie and Chen, Jilin and Kulkarni, Chinmay and Cheng, Heng-Tze and Le, Quoc and Chi, Ed},
+	month = dec,
+	year = {2023},
+	note = {arXiv:2312.00763 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language, Computer Science - Human-Computer Interaction, Computer Science - Machine Learning},
+	annote = {Comment: 19 pages, 11 figures},
+}
+
+
+
+@inproceedings{lewis_retrieval-augmented_2020,
+	address = {Red Hook, NY, USA},
+	series = {{NIPS}'20},
+	title = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
+	isbn = {978-1-71382-954-6},
+	urldate = {2023-12-24},
+	booktitle = {Proceedings of the 34th {International} {Conference} on {Neural} {Information} {Processing} {Systems}},
+	publisher = {Curran Associates Inc.},
+	author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and Küttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rocktäschel, Tim and Riedel, Sebastian and Kiela, Douwe},
+	month = dec,
+	year = {2020},
+	pages = {9459--9474},
+}
+
+@misc{gao_retrieval-augmented_2023,
+	title = {Retrieval-{Augmented} {Generation} for {Large} {Language} {Models}: {A} {Survey}},
+	shorttitle = {Retrieval-{Augmented} {Generation} for {Large} {Language} {Models}},
+	doi = {10.48550/arXiv.2312.10997},
+	urldate = {2023-12-24},
+	publisher = {arXiv},
+	author = {Gao, Yunfan and Xiong, Yun and Gao, Xinyu and Jia, Kangxiang and Pan, Jinliu and Bi, Yuxi and Dai, Yi and Sun, Jiawei and Wang, Haofen},
+	month = dec,
+	year = {2023},
+	note = {arXiv:2312.10997 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
+}
