--- a/chapter1.tex
+++ b/chapter1.tex
@@ -33,17 +33,28 @@ Despite the assistance provided by the catalogue offered by EHDEN, identifying t
 Even with all this help, choosing the most appropriate databases is difficult and time-consuming, making it difficult to achieve the ideal search desired for the study. The challenge to be addressed is to assist a medical researcher in reaching the ideal search based on the protocol and parameters of their study.
 
 
-\section{Goals}
+\section{Objectives}
 
-How can a conversational query builder support medical researchers when defining a study protocol?
+% How can a conversational query builder support medical researchers when defining a study protocol?
+% Goals:
+% 1. study of state-of-the-art
+% 2. developed a chat-like search engine to help discover the best databases for a study
+% 3. enhance the engine to collect additional information to provide a query as outcome.
 
-Goals:
 
-1. study of state-of-the-art
+The main objective of this work is to develop a conversational query builder to help medical researchers define their study objectives. To achieve this objective, the present dissertation seeks to answer the following research question:
 
-2. developed a chat-like search engine to help discover the best databases for a study
+\begin{quote}
+    \small\textit{How can a conversational query builder support medical researchers when defining a study protocol?}
+\end{quote}
 
-3. enhance the engine to collect additional information to provide a query as outcome.
+To answer this question, the work can be addressed by focusing on different aspects, namely by dividing it into three stages:
+
+\begin{enumerate}
+    \item Study of state-of-the-art, namely: i) Information retrieval systems, ii) Generative-based conversational virtual agents, and iii) Interactive query builder;
+    \item Developed a chat-like search engine to help discover the best databases for a study;
+    \item Enhance the engine to collect additional information to provide a query as outcome. 
+\end{enumerate}
 
 
 
