--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -30,7 +30,6 @@
     {Document Length}
 \newcommand{\dl}{\gls{dl}}
 
-
 \newabbreviation
     {bm25}
     {BM25}
@@ -113,7 +112,7 @@
     {ml}
     {ML}
     {Machine Learning}
-\newcommand{\mlearning}{\gls{mlearning}}
+\newcommand{\mlearing}{\gls{mlearing}}
 
 \newabbreviation
     {rag}
